# protocol_session-cpp

./: CMakeLists.txt  README.md  conanfile.txt
conan_package/: base.py  conanfile.py  dev_include_source.py  release_fetches_source.py  release_fetches_source_https.py  release_fetches_source_ssh.py  release_include_source.py
conan_package/test_package/: conanfile.py  example.cpp
include/protocol_session/: Exceptions.hpp  Session.cpp  Session.hpp  common.hpp
include/protocol_session/detail/: Buying.cpp  Buying.hpp  Connection.hpp
sources/: CMakeLists.txt
sources/include/protocol_session/: Callbacks.hpp  Session.cpp  Session.hpp  SpeedTestPolicy.hpp  Status.hpp
sources/include/protocol_session/detail/: Buying.cpp  Buying.hpp  Connection.cpp  Connection.hpp  Observing.hpp  Piece.hpp  PieceDeliveryPipeline.hpp  Seller.cpp  Seller.hpp  Selling.cpp  Selling.hpp
sources/src/: PieceDeliveryPipeline.cpp  SpeedTestPolicy.cpp  common.cpp
sources/test/: SessionSpy.cpp  SessionSpy.hpp  SessionTest.cpp  SessionTest.hpp  test_main.cpp
